<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

    <item android:id="@+id/menuNotification"
        android:icon="@drawable/notification"
        android:title="@string/notification"/>

    <item android:id="@+id/menuBeliPoint"
        android:icon="@drawable/coins"
        android:title="@string/beliPoint"/>

    <item android:id="@+id/menuPaket"
        android:icon="@drawable/buy"
        android:title="@string/beliVoucher"/>

    <item android:id="@+id/menuSpeed"
        android:icon="@drawable/fast"
        android:title="@string/speed"/>

    <item android:id="@+id/menuStatus"
        android:icon="@drawable/museum"
        android:title="@string/status"/>

    <item android:id="@+id/menuChat"
        android:icon="@drawable/chat"
        android:title="@string/chat"/>

    <item android:title="@string/lainnya">
        <menu>
            <item android:id="@+id/menuSetting"
                android:icon="@drawable/admin"
                android:title="@string/setting"/>

            <item android:id="@+id/menuAbout"
                android:icon="@drawable/information"
                android:title="@string/about"/>

            <item android:id="@+id/menuLogout"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>

        </menu>

    </item>

</menu>