<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/adminFragmentLoginMikrotik"
        android:icon="@drawable/router_hitam"
        android:title="Login Mikrotik"/>

    <item android:id="@+id/hotspot"
        android:icon="@drawable/wifi"
        android:title="Hotspot"/>

    <item android:id="@+id/managementPaketHotspot"
        android:icon="@drawable/museum"
        android:title="Management Paket Voucher"/>

    <item android:id="@+id/adminFragmentAlatPembayaranPoin"
        android:icon="@drawable/wallet_orange"
        android:title="Alat Pembayaran Poin"/>
    
    <item android:id="@+id/tambahPoint"
        android:icon="@drawable/buy"
        android:title="@string/tambahPoin"/>

    <item android:id="@+id/managementUser"
        android:icon="@drawable/profile"
        android:title="@string/managementUser"/>

    <item android:id="@+id/pushNotification"
        android:icon="@drawable/notification"
        android:title="@string/pushNotification"/>

    <item android:id="@+id/trafficMikrotik"
        android:icon="@drawable/fast"
        android:title="@string/monitoring"/>

    <item android:title="@string/lainnya">
        <menu>

            <item android:id="@+id/menuLogoutAdmin"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>

        </menu>

    </item>
</menu>